<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password_label">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="new_account_button_text">Create new account</string>
    <string name="welcome_text">Welcome to the Shoe Store. This app allows you to browse previusly saved shoe and also add new ones.\n\nClick on the Instruction button to go to the Instruction Page.</string>
    <string name="shoe_list_text">Shoe List</string>
    <string name="log_out_text">LOG OUT</string>
    <string name="shoe_name_text">Shoe Name</string>
    <string name="shoe_size_text">Shoe Size</string>
    <string name="shoe_name_textview" />
    <string name="company_text">Company</string>
    <string name="description_text">Description</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="save_button_text">SAVE</string>
    <string name="instruction_text">This page gives you instruction on how to use this application\n\nClick on the Shoe list button to get to the Shoe list page.\n\nTo add a new shoe, click on the add(+) button which brings you the new shoe page where you can fill out the form and click Save</string>


</resources>
